it new listing input styling

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -212,6 +212,10 @@
   .was-validated .form-control:invalid { border-color: #c13515 !important; }
   .was-validated .form-control:valid { border-color: #008a05 !important; }
   .custom-switch label { padding: 4px; }
+  .input-group input{ 
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0 !important;
+}
 </style>
 
 <script>
