--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -168,6 +168,11 @@
   .btn-launch { background: radial-gradient(circle at center, #FF385C 0%, #E61E4D 100%); color: #fff; border: none; transition: 0.4s; }
   .btn-launch:hover { transform: scale(1.01); box-shadow: 0 10px 20px rgba(230, 30, 77, 0.25); color: #fff; }
   #image-preview-container { border: 2px dashed #ddd; background: #fafafa; }
+  .input-group input{ 
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0 !important;
+}
+
 </style>
 
 <script>
